docs: Add documentation for Auth.SendVerificationEmail & Auth.VerifyEmail
