# src/response/example/error_example.go
@@ -18,6 +18,12 @@ type FailedResetPassword struct {
 	Message string `json:"message" example:"Password reset failed"`
 }
 
+type FailedVerifyEmail struct {
+	Code    int    `json:"code" example:"401"`
+	Status  string `json:"status" example:"error"`
+	Message string `json:"message" example:"Verify email failed"`
+}
+
 type Forbidden struct {
 	Code    int    `json:"code" example:"403"`
 	Status  string `json:"status" example:"error"`
